soup_message_headers_get_content_type: annotate @params

https://bugzilla.gnome.org/show_bug.cgi?id=677002